http-filter-example/envoy.yaml
static_resources:
  listeners:
  - name: listener_1
    address:
      socket_address: 
        address: 127.0.0.1
        port_value: 8080
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: AUTO
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains:
              - "*"
              routes:
              - match: 
                  prefix: "/"
                route: 
                  cluster_header: routing_destination
                  # cluster: service_http_bin
                  auto_host_rewrite: true
          http_filters:
          - name: sample
            typed_config:
              "@type": type.googleapis.com/sample.Decoder
              key: foo
              val: bar
          - name: envoy.filters.http.router
            typed_config: {}
  clusters:
  - name: service_http_bin
    type: LOGICAL_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: service_http_bin
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: httpbin.org
                port_value: 80
admin:
  access_log_path: /dev/stdout
  address:
    socket_address: 
      address: 127.0.0.1
      port_value: 8081
